<resources>
    <string name="app_name">Auto Dokta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_1">Offers</string>
    <string name="item_2">Engine &amp; Drivetrain</string>
    <string name="item_3">Headlights &amp; Lighting</string>
    <string name="item_4">Brakes, Suspension &amp; Steering</string>
    <string name="item_5">Interior Accessories</string>
    <string name="item_6">Exterior Accessories</string>
    <string name="item_7">Tools &amp; Garage</string>
    <string name="item_8">Wheels</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>
    <string name="contact_message">We will like to hear from you.\nLocation:Kumasi,Ashanti Region.\nTelephone:0266711801.\nEmail:prino2002@yahoo.com"</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!
    </string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>
    <string name="item_desc">Lorem Ipsum della pon sad tupsim resd lorem adontom for sert, della pon sad tupsim resd lorem della pon sad tupsim resd lorem della pon sad tupsim resd lorem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nointernet">No Internet Connection. \n Tap to Refresh</string>
    <string name="delivery_method"><b>Home and Office Delivery</b> \nDelivered between 2 days for GHC 10.00</string>

    <string name="autodoktapay">You already have an account registered on AutoDokta Pay.You may proceed and complete your payment in one click!\nIf you have any balance,please select this option to use it.</string>

    <string name="mtninstructions">1. Dial *170# OR On your Phone Menu, locate "MY MTN" and select Mobile Money.\n\n2. Select "Transfer Money"\n\n3. Select "Other Networks".\n\n4. Choose "AirtelTigo"\n\n5. Enter mobile Number "0266711801"\n\n6. Confirm mobile number "0266711801"/n/n7. Enter Amount. Eg. 50 for GHS 50.00\n\n8. Enter Order Number as reference. You will see your order number after clicking on Confirm Order.\n\n9. Enter your Mobile Money pin.\n\n10. You will recieve an SMS or Email confirming message of successsful payment. </string>
    <string name="confirm"><b>1. Confirmation</b>\n\nCongratulations, Your order was successfully submmitted and our customer service may contact you for verification.If you are paying via mobile money, please make payment within 24 hours to avoid cancellation of order.</string>
    <string name="shipping"><b>2. Shipping</b>\n\nYour order will be prepared for shipment once it is confirmed. You will receive updates.</string>
    <string name="track"><b>3. Track</b>\nYou can track your order by clicking on My Garage</string>

    <string name="product_name">Name</string>
    <string name="product_price">Prize</string>
    <string name="seller_number">Phone number</string>
    <string name="product_description">Description</string>
    <string name="upload_event">Upload Event</string>
    <string name="event_location">Event location</string>
    <string name="event_description">Event description</string>
    <string name="upload_event_button">Upload event</string>
    <string name="job_title">Job title</string>
    <string name="job_responsibilities">Responsibilities</string>
    <string name="job_desc">Job description</string>

    <!--    services-->
    <string name="car_rental">Car Rental</string>
    <string name="interior_upholstery">Car Interior Upholstery</string>
    <string name="car_spraying">Car Spraying</string>
    <string name="auto_diagnostic">Auto Diagnostic</string>
    <string name="key_programming">Car Key Programming</string>
    <string name="transport">Transportation</string>
    <string name="service_upload">Upload Service</string>
    <string name="service_upload_text">Fill in the form to upload your service</string>
    <string name="service_upload_btn">Upload Service</string>
    <string name="service_full_description">Full Description</string>
    <string name="service_short_description">Short Description </string>
    <string name="service_seller_number">Mobile</string>
    <string name="service_location">Location</string>
    <string name="serviceImages">todo</string>

    <!--    recyclerview click-->
    <item name="item_click_support" type="id" />

    <string-array name="service_type_array">
        <item>Car Rental</item>
        <item>Car Interior Upholstery</item>
        <item>Car Spraying</item>
        <item>Auto Diagnostic</item>
        <item>Car Key Programming</item>
        <item>Auto Diagnostic</item>
        <item>Vehicle Insurance</item>
        <item>Air Conditioning</item>
        <item>Engine Oil Change</item>
        <item>Puncture and Tyre Replacement</item>
    </string-array>


    <string-array name="product_type">
        <item></item>
        <item>Cars</item>
        <item>Buses and microbuses</item>
        <item>Tools and equipment</item>
        <item>Motorcycle and Powersports</item>
        <item>Trucks and Trailers</item>
        <item>Electronics and Accessories</item>
        <item>Oil and Fluids</item>
        <item>Replacement Part</item>
        <item>Car Care</item>
    </string-array>

    <string-array name="region_spinner">
        <item>Ashanti</item>
        <item>Central Region</item>
        <item>Greater Accra</item>
        <item>Brong Ahafo</item>
        <item>Eastern Region</item>
        <item>Northern Region</item>
        <item>UpperEast Region</item>
        <item>UpperWest Region</item>
        <item>Volta Region</item>
        <item>Western Region</item>
    </string-array>


</resources>
