<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.autodokta.orderComplete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:background="@color/grey_light">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/correct"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thank You!"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:textColor="@android:color/holo_green_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order No  30988322"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:id="@+id/ordernumber"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:textColor="@android:color/holo_green_dark"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="NEXT STEPS"
            android:textColor="@color/colorGrey"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/confirm"
            android:textColor="@color/gen_black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/shipping"
            android:textColor="@color/gen_black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/track"
            android:textColor="@color/gen_black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="SEE YOUR ORDERS"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:id="@+id/seeorders"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="CONTINUE SHOPPING"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:id="@+id/continuetoShop"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</ScrollView>
